# api-realtime-ai

./: .env.example  .gitignore  Dockerfile  Dockerfile.gpu  INNOVATION_STATUS.md  Makefile  README.md  USE_CASE.md  VALUE.md  app-new.py  app.py  app.py.text_translate_OK  buffer.md  chat_completions.py  mind-map.md  observability.py  pyproject.toml  requirements.txt  upgrade.sh
.github/workflows/: deploy.yml  load-test.yml
charts/realtime-bridge/: .helmignore  Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.yaml
charts/realtime-bridge/templates/: _helpers.tpl  alerts.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: architecture.md  deployment.md  gpu-setup.md  load-testing.md  observability-dashboards.md  observability.md  overview.md  prometheus-alerts.yaml  realtime-protocol-diff.md
docs/grafana/: realtime-observability-dashboard.json  realtime-observability.json
external-test/: .env  .env.example  .gitignore  Makefile  README.md  echo-cancel.html  half-duplex.html  index-ori.html  index.html  install.sh  proxy.py  pyproject.toml  start.sh  stop.sh  transcript-replay.html  translate_text.py  upgrade.sh
load-tests/: k6-realtime.js
web/: .env.example  README.md  index.html  package.json  tsconfig.json
web/src/: App.tsx  config.ts  main.tsx  types.ts
web/src/api/: realtimeClient.ts
web/src/components/: ChatComposer.tsx  FeedbackPanel.tsx  HistoryPanel.tsx  MessageList.tsx
web/src/styles/: app.css
