[project]
name = "external-test"
version = "0.1.0"
description = "Browser and CLI realtime API smoke tests"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "openai>=1.108.0",
  "websockets>=15.0.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
